--- a/main.tex
+++ b/main.tex
@@ -1168,7 +1168,7 @@ The definition of distance between clusters is
 Where $a$ and $b$ are points belonging to set A and B respectively, and $d(a,b)$ is their euclidean distance.
 The definition of distance between clusters is the average of all between-clusters element distances.
 
-This definition proved to be the best out of others used \todo[inline]{come sono state valutate? facciamo vedere dei risultati quantitativi per i vari casi! (va bene che ad occhio ho aggiustato la distanza per tutte e 3 le definizioni?) (mettere i dendrogrammi e le tabelle.)}, as it permitted to separate the synapses in eighteen different clusters, mostly composed by only one digit.
+This definition proved to be the best out of others used, as it permitted to separate the synapses in eighteen different clusters, mostly composed by only one digit.
 
 
 \begin{table}[h!]
@@ -1185,7 +1185,7 @@ This definition proved to be the best out of others used \todo[inline]{come sono
 	 more digits clusters were never observed.}
 \end{table}
 
-
+\todo[inline]{rifare co tutti a 18?}
 
 \section{Resulting clusters from 18-clusters agglomerative hierarchical clustering}
 
