--- a/my_bib_file.bib
+++ b/my_bib_file.bib
@@ -210,3 +210,13 @@
 	year={1998},
 	publisher={World Scientific}
 }
+
+@article{sporns2007brain,
+  title={Brain connectivity},
+  author={Sporns, Olaf},
+  journal={Scholarpedia},
+  volume={2},
+  number={10},
+  pages={4695},
+  year={2007}
+}
