changed euclidean and cosine distance cluster to 18 clusters subdivision

--- a/main.tex
+++ b/main.tex
@@ -1419,6 +1419,18 @@ The method of linkage used is the Ward method, in wich the distance between two 
     \caption{}
 \end{figure}
 
+\begin{figure} [H]
+	\centering
+	\includegraphics [width=\textwidth ] {c/e/15.png}
+	\caption{}
+\end{figure}
+
+\begin{figure} [H]
+	\centering
+	\includegraphics [width=\textwidth ] {c/e/17.png}
+	\caption{}
+\end{figure}
+
 \chapter{Cosine distance cluster analysis: resulting clusters}
 
 The definition of cosine distance is
@@ -1462,4 +1474,23 @@ The linkage method used was to take the average of distances between members of 
     \includegraphics [width=\textwidth ] {c/c/11.png}
     \caption{}
 \end{figure}
+
+\begin{figure} [H]
+	\centering
+	\includegraphics [width=\textwidth ] {c/c/13.png}
+	\caption{}
+\end{figure}
+
+\begin{figure} [H]
+	\centering
+	\includegraphics [width=\textwidth ] {c/c/15.png}
+	\caption{}
+\end{figure}
+
+\begin{figure} [H]
+	\centering
+	\includegraphics [width=\textwidth ] {c/c/17.png}
+	\caption{}
+\end{figure}
+
 \end{document}
