--- a/my_bib_file.bib
+++ b/my_bib_file.bib
@@ -220,3 +220,14 @@
   pages={4695},
   year={2007}
 }
+
+@article{campbell2002kernel,
+  title={Kernel methods: a survey of current techniques},
+  author={Campbell, Colin},
+  journal={Neurocomputing},
+  volume={48},
+  number={1-4},
+  pages={63--84},
+  year={2002},
+  publisher={Elsevier}
+}
