--- a/main.tex
+++ b/main.tex
@@ -225,12 +225,16 @@ f(x)=\frac{1}{2}||x-x_{true}||_2
 \label{true}
 \end{equation}
 That is, half the square of the difference between the output vector and the correct output.
-In this case, the correct output vector corresponds to one in the n-th dimension of the vector, where n is the digit represented by the input, and zero in all other dimensions.
+In this case, the correct output vector corresponds to one in the (n+1)-th dimension of the vector, where n is the digit represented by the input, and zero in all other dimensions. For example, the correct output vector for an image representing a three is
+
+\begin{equation}
+	3 \rightarrow x = (0,0,0,1,0,0,0,0,0,0).
+\end{equation}
 
 Considering the space of all possible weights value, training the network reduces to finding the point of this space (that is, the set of weights) that minimizes this error function on the dataset.
 This is obtained thought a technique known as gradient descent.
 In gradient descent we calculate the gradient of the loss function, then we take consecutive steps in the opposite direction of the gradient until we find the minimum of the loss function.
-The steps are typically taken smaller and smaller to increase precision.
+The steps are typically taken increasingly small, so initially we move faster towards convergence and later we are more slower but more precisely.
 
 Within the context of machine learning, the gradient is calculated by processing a database, the training database. The act of processing the database and updating the parameters of the model is referred to as an "epoch" \cite{spall2005introduction}.
 
@@ -241,7 +245,8 @@ Within the context of machine learning, the gradient is calculated by processing
 \end{figure}
 
 Notice how this requires the error function to be differentiable.
-But how does one calculate the gradient within respect to the weights of all the neurons that are not output neurons?
+
+How does one calculate the gradient within respect to the weights of all the neurons that are not output neurons?
 
 \subsection{Backpropagation}
 Backpropagation is a useful technique used to obtain the gradient within respect to neurons in all layers.
@@ -346,8 +351,8 @@ In multilayered networks, this means that in order to evaluate the infinitesimal
 
 The algorithm is said to be non-local, requiring information from all the above layers.
 In biological neural networks, by contrast the information available to a single synapse is only relative to the two cells it connects.
-So the biological process is "local" in the sense that a synapse can evolve in any arbitrarily complicated function of some parameters, but in the end those parameters must be only those relative to the two cells it connects.
-As we will see shortly, our algorithm is local in a less strict sense: in the sense that a synapse evolves only with the information of the layers it connects; no above layer information is used in its evolution  \cite{zhang2017split}.
+So the biological process is "local" in the sense that a synapse can evolve in any arbitrarily complicated function of some parameters, but in the end those parameters must be only those relative to the two cells it connects  \cite{zhang2017split}.
+As we will see shortly, our algorithm is local in a less strict sense: in the sense that a synapse evolves only with the information of the layers it connects; no above layer information is used in its evolution.
 
 \section{The algorithm}
 In a 2019 paper \cite{krotov2019unsupervised}, Dimity Krotov and John J. Hopfield proposed a neural network model whose main characteristics are unsupervised learning and locality of information.
@@ -363,8 +368,8 @@ The parameters of the network, corresponding to the scalars that compose the mat
 There is, however a difference to the implementation described in the previous section:
 
 Processing the whole database at each step of training would be time consuming. Instead, using a technique known as \textit{stochastic} gradient descent, we take a subset of the database  (known as minibatch) and treat it as the whole database. Due to statistical fluctuations, the minibatch will obviously not be representative of the whole database: at a practical level, this means that the gradient we are calculating is not precisely in the direction of the actual gradient, the one that we would only get processing the whole database in a single minibatch.
-We are, however, trading a reasonable amount of precision for the possibility of processing way more batches that we would we able to if each batch was composed of the whole database, so in the end working in minibatches works in favor of our objective, that is reaching convergence to a set of trained weights able to make predictions on the testing database.
-In our case, the 450,000 samples training database was split in 45,000 minibatches of 100 samples randomly chosen among the training database.
+We are, however, trading a reasonable amount of precision for the possibility of processing way more batches that we would we able to if each batch was composed of the whole database, so in the end working in minibatches works in favor of our objective: reaching convergence to a set of trained weights able to make predictions on the testing database.
+In our case, the 450,000 samples training database was split in 45,000 minibatches of 100 samples randomly chosen without repetition among the training database.
 
 So each minibatch processed gives us an approximation of the direction in the space of weights; But for how long should we proceed in that direction before processing another minibatch and getting another direction?
 As usual, there is no universal answer; The one selected in this case is
@@ -374,7 +379,7 @@ As usual, there is no universal answer; The one selected in this case is
 	\label{learnrate}
 \end{equation}
 
-Where $\alpha=0.1$ is a scaling constant, $dW$ is the update to the weights $W$ before we apply this normalization, and "epochs" is the total number of epochs used, 100.
+Where $\alpha=0.1$ is a scaling constant, $dW$ is the update to the weights $W$ before we apply this normalization, "epoch" is the current epoch index number and "epochs" is the total number of epochs used, 100.
 
 The authors also sum up the characteristics of the algorithm  in four points:
 \begin{itemize}
@@ -479,7 +484,7 @@ The dataset is commonly used as a simple dataset for testing machine learning al
 
 
 \section{Supervised phase}
-Accuracy is defined the percentage of correctly classified samples.
+Accuracy, used to quantify the goodness of our model, is defined the percentage of correctly classified samples.
 It is, of course, not useful to test this quantification of our model's performance on the same database used to train our model.
 For this reason, the database has been split in two:
 a training database of 450,000 samples and a database for testing accuracy of 10,000 samples.
@@ -492,7 +497,7 @@ The random forest is a supervised machine learning method that is based on a set
 
 \subsubsection{Decision trees}
 At its core, a decision tree is nothing more than a set of binary decisions based on data associated with the samples.
-The data can be both categorical (i.e.  it is a true of false affirmation) or numerical (i.e.  it has a value associated to it), in which case we make use of thresholds to turn use it as if it was categorical.
+The data can be both categorical (i.e.  it is a true of false affirmation) or numerical (i.e.  it has a value associated to it), in which case we make use of thresholds to use it as if it was categorical.
 (see figure \ref{chestt})
 
 \begin{figure} [H]
@@ -504,7 +509,7 @@ The data can be both categorical (i.e.  it is a true of false affirmation) or nu
 
 This is the basic structure of decision trees.
 Realistic decision trees have much more nodes (The decisions that need to be taken) and leaves (The final classifications).
-Note that a tree can ask for the same numerical data to pass or not more than one different threshold (for example, a tree could ask if a patient heart is over 60 bpm and later down the stream ask if the heart rate is over 80 bpm).
+Note that a tree can ask for the same numerical data to pass or not more than one different threshold (for example, a tree could ask if a patient's blood pressure is above 120 mmHg and later down the stream ask if it is above 140 mmHg).
 
 \subsubsection{Building decision trees}
 
@@ -518,7 +523,7 @@ The Gini impurity equals
 	G = \sum_i p(C_i) \cdot (1 - p(C_i))
 \end{equation}
 
-Where $p(C_i)$ is the probability of a sample belonging to class $C_i$.
+Where $p(C_i)$ is the probability that a sample randomly chosen from our set belongs to to class $C_i$.
 The lower the Gini impurity is, the better that single feature is a separating data by class.
 A feature that perfectly classifies the whole database has a Gini impurity of 0.
 
@@ -527,7 +532,7 @@ For example, let's consider this toy database:
 \begin{table}[H]
 	\begin{center}
 		\begin{tabular}{c|c|c} % <-- Alignments: 1st column left, 2nd middle and 3rd right, with vertical lines in between
-			\textbf{Blood pressure} & \textbf{Risk of hearth disease}\\
+			\textbf{Patient} & \textbf{Blood pressure} & \textbf{Risk of hearth disease}\\
 			\hline
 			Patient 1 &  176 mmHg & High\\
 			Patient 2 &  168 mmHg & High\\
@@ -577,7 +582,7 @@ Getting back to the problem of actually building the decision tree, we first dec
 During our descent long the tree, if we ever find a node were subsequential splitting can only increase the Gini impurity, we stop there and make the node a leaf \cite{breiman2001random}.
 
 \subsubsection{Building random forests}
-Random trees, while easy to build, interpret and implement, as a method for supervised learning are (sadly) hindered by the low accuracy that characterizes this method.
+Random trees, while easy to build, interpret and implement, are (sadly) hindered by the low accuracy that characterizes this method.
 By their own nature they are very sensible to outliers. The reason for this can be understood by looking at their hierarchical nature: a single split that is not very good propagates this error downstream.
 Another problem is that proceeding downstream the database becomes smaller and smaller, and the model is prone to overfitting to the data \cite{bramer2007avoiding}.
 
@@ -695,7 +700,7 @@ Let $\phi (x)$ be the function that transposes in higher dimension our samples $
 
 Where $\phi$ is the transformation in higher dimensions of our samples.
 
-Now, Mercer's theorem states that such a matrix, being symmetrical and positive semidefinite, can be expressed as a function of $x$ without explicitly calculating $\phi (x)$:
+Now, Mercer's theorem (\cite{campbell2002kernel}) states that such a matrix, being symmetrical and positive semidefinite, can be expressed as a function of $x$ without explicitly calculating $\phi (x)$:
 
 \begin{equation}
 	K =
